# bat_jester_model_training

./: .devenv.flake.nix  .gitignore  01_data_reformatting.ipynb  02_train_test_split.ipynb  03_model_training.ipynb  05_gen_prod_data.py  LICENSE  README.md  data_reformatting.ipynb  dev_notes.md  devenv.nix  flake.nix  generate_production_test_data.py  label_data.py  model_training.ipynb  pyproject.toml  python_utils.py  requirements.txt  scratch.py
.devenv/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
.github/: CODEOWNERS
data_preprocessing/: run_data_labeling_steps.py  video_labeler.py
docs/: development_plan.md  market_research.md  previous_approach.md
previous_approach/: 02_train_test_split.ipynb
